--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <script src="core.js"></script>
     </head>
     <body>
-
+        <div class="hero-container">
+            <h1 class="header-font font-accent"><span class="accent-highlight">CUM</span>Group</h1>
+            <p>Hello there</p>
+        </div>
     </body>
 </html>
