--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
         <script src="core.js"></script>
     </head>
     <body>
+        <nav>
+            <img src="assets/1641e470ee2baac6628de94901c38190.png" alt="CUMGroup"/>
+            <div class="nav-links">
+                <a>Home</a>
+                <a>About</a>
+                <a>Projects</a>
+                <a>Contact</a>
+            </div>
+        </nav>
         <div class="hero-container">
-            <h1 class="header-font font-accent"><span class="accent-highlight">CUM</span>Group</h1>
-            <p>Hello there</p>
+            <div>
+                <h1 class="header-font font-accent"><span class="accent-highlight">CUM</span>Group</h1>
+                <p class="subtitle">Your partner for professional shitposting.</p>
+            </div>
         </div>
     </body>
 </html>
