--- a/index.html
+++ b/index.html
@@ -8,18 +8,33 @@
     </head>
     <body>
         <nav>
-            <img src="assets/1641e470ee2baac6628de94901c38190.png" alt="CUMGroup"/>
+            <a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="assets/1641e470ee2baac6628de94901c38190.png" alt="CUMGroup"/></a>
             <div class="nav-links">
-                <a>Home</a>
-                <a>About</a>
-                <a>Projects</a>
-                <a>Contact</a>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact">Contact</a>
             </div>
         </nav>
-        <div class="hero-container">
+        <div class="screen-container" id="home">
             <div>
                 <h1 class="header-font font-accent"><span class="accent-highlight">CUM</span>Group</h1>
                 <p class="subtitle">Your partner for professional shitposting.</p>
+            </div>
+        </div>
+        <div class="screen-container" id="about">
+            <div>
+                <h1 class="header-font font-accent">About</h1>
+            </div>
+        </div>
+        <div class="screen-container" id="projects">
+            <div>
+                <h1 class="header-font font-accent">Projects</h1>
+            </div>
+        </div>
+        <div class="screen-container" id="contact">
+            <div>
+                <h1 class="header-font font-accent">Contact</h1>
             </div>
         </div>
     </body>
