--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
+                <a href="#team">Our Team</a>
                 <a href="#contact">Contact</a>
             </div>
         </nav>
@@ -24,17 +25,28 @@
         </div>
         <div class="screen-container" id="about">
             <div>
-                <h1 class="header-font font-accent">About</h1>
+                <h1 class="header-font-small font-accent">About</h1>
             </div>
         </div>
         <div class="screen-container" id="projects">
             <div>
-                <h1 class="header-font font-accent">Projects</h1>
+                <h1 class="header-font-small font-accent">Projects</h1>
             </div>
         </div>
-        <div class="screen-container" id="contact">
+        <div class="screen-container" id="team">
             <div>
-                <h1 class="header-font font-accent">Contact</h1>
+                <div class="animated-box team-splash">
+                    <img src="assets/team/alex.jpg" />
+                    <img src="assets/team/anna.png" />
+                    <img src="assets/team/elnaz.jpg" />
+                    <img src="assets/team/jas.png" />
+                </div>
+                <h1 class="header-font-small font-accent">Our Team</h1>
+            </div>
+        </div>
+        <div class="content-container" id="contact">
+            <div>
+                <h1 class="header-font-small font-accent">Contact</h1>
             </div>
         </div>
     </body>
