--- a/index.html
+++ b/index.html
@@ -33,15 +33,39 @@
                 <h1 class="header-font-small font-accent">Projects</h1>
             </div>
         </div>
-        <div class="screen-container" id="team">
+        <div class="screen-plus-container" id="team">
             <div>
-                <div class="animated-box team-splash">
-                    <img src="assets/team/alex.jpg" />
-                    <img src="assets/team/anna.png" />
-                    <img src="assets/team/elnaz.jpg" />
-                    <img src="assets/team/jas.png" />
-                </div>
                 <h1 class="header-font-small font-accent">Our Team</h1>
+                <div class="team-group">
+                    <div class="team-member">
+                        <img src="assets/team/alex.jpg" />
+                        <p>
+                            <span class="team-name">Alex</span><br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
+                        </p>
+                    </div>
+                    <div class="team-member">
+                        <p>
+                            <span class="team-name">Anna</span><br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
+                        </p>
+                        <img src="assets/team/anna.png" />
+                    </div>
+                    <div class="team-member">
+                        <img src="assets/team/jas.png" />
+                        <p>
+                            <span class="team-name">Jas</span><br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
+                        </p>
+                    </div>
+                    <div class="team-member">
+                        <p>
+                            <span class="team-name">Elnaz</span><br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
+                        </p>
+                        <img src="assets/team/elnaz.jpg" />
+                    </div>
+                </div>
             </div>
         </div>
         <div class="content-container" id="contact">
