--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
     <head>
         <title>CUMGroup - Welcome</title>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styles.css" rel="stylesheet" />
-        <script src="core.js"></script>
+        <script defer src="core.js"></script>
     </head>
     <body>
         <nav>
             <a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="assets/1641e470ee2baac6628de94901c38190.png" alt="CUMGroup"/></a>
-            <div class="nav-links">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#projects">Projects</a>
-                <a href="#team">Our Team</a>
-                <a href="#contact">Contact</a>
+            <a id="navbar-toggle"><span class="navbar-toggle-icon"></span></a>
+            <div class="nav-links" id="nav">
+                <a class="nav-link" href="#home">Home</a>
+                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#projects">Projects</a>
+                <a class="nav-link" href="#team">Our Team</a>
+                <a class="nav-link" href="#contact">Contact</a>
             </div>
         </nav>
         <div class="screen-container" id="home">
@@ -40,30 +42,30 @@
                     <div class="team-member">
                         <img src="assets/team/alex.jpg" />
                         <p>
-                            <span class="team-name">Alex</span><br>
+                            <a href="https://github.com/AlexMi-Ha" target="_blank" class="team-name">Alex</a><br>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
                         </p>
                     </div>
                     <div class="team-member">
+                        <img src="assets/team/anna.png" />
                         <p>
-                            <span class="team-name">Anna</span><br>
+                            <a href="https://github.com/Annalytic-programming" target="_blank" class="team-name">Anna</a><br>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
                         </p>
-                        <img src="assets/team/anna.png" />
+                    </div>
+                    <div class="team-member">
+                        <img src="assets/team/elnaz.jpg" />
+                        <p>
+                            <a href="https://github.com/elnaz-gharoon" target="_blank" class="team-name">Elnaz</a><br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
+                        </p>
                     </div>
                     <div class="team-member">
                         <img src="assets/team/jas.png" />
                         <p>
-                            <span class="team-name">Jas</span><br>
+                            <a hreF="http://github.com/jas20202" target="_blank" class="team-name">Jas</a><br>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
                         </p>
-                    </div>
-                    <div class="team-member">
-                        <p>
-                            <span class="team-name">Elnaz</span><br>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
-                        </p>
-                        <img src="assets/team/elnaz.jpg" />
                     </div>
                 </div>
             </div>
