--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
                         </p>
                     </div>
+                    <div class="team-member">
+                        <img src="assets/team/nick.png" />
+                        <p>
+                            <a hreF="http://github.com/WachtelHD" target="_blank" class="team-name">Nick</a><br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt repellendus sint tenetur quas voluptatibus optio, odit non. Adipisci neque aliquid ut maiores ex labore iure, qui esse, iusto minus soluta.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
