--- a/index.html
+++ b/index.html
@@ -30,9 +30,23 @@
                 <h1 class="header-font-small font-accent">About</h1>
             </div>
         </div>
-        <div class="screen-container" id="projects">
+        <div class="screen-plus-container" id="projects">
             <div>
                 <h1 class="header-font-small font-accent">Projects</h1>
+                <div class="project-cards">
+                    <div class="card">
+                        <div class="card-wrap">
+                            <img class="card-image" src="assets/projects/template.webp"/>
+                            <div class="card-content">
+                                <h2 class="card-title">Template</h2>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint quaerat accusantium cumque asperiores voluptatem vel debitis, deserunt ratione.</p>
+                            </div>
+                            <div class="card-actions">
+                                <a href="#">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="screen-plus-container" id="team">
