--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
                 <div class="project-cards">
                     <div class="card">
                         <div class="card-wrap">
-                            <img class="card-image" src="assets/projects/template.webp"/>
-                            <div class="card-content">
-                                <h2 class="card-title">Template</h2>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint quaerat accusantium cumque asperiores voluptatem vel debitis, deserunt ratione.</p>
+                            <div>
+                                <img class="card-image" src="assets/projects/template.webp"/>
+                                <div class="card-content">
+                                    <h2 class="card-title">Template</h2>
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint quaerat accusantium cumque asperiores voluptatem vel debitis, deserunt ratione.</p>
+                                </div>
                             </div>
                             <div class="card-actions">
-                                <a href="#">Read More</a>
+                                <button >Read More</button>
                             </div>
                         </div>
                     </div>
