--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styles.css" rel="stylesheet" />
         <script defer src="core.js"></script>
+        <script defer src="projects.js"></script>
     </head>
     <body>
         <nav>
@@ -33,21 +34,8 @@
         <div class="screen-plus-container" id="projects">
             <div>
                 <h1 class="header-font-small font-accent">Projects</h1>
-                <div class="project-cards">
-                    <div class="card">
-                        <div class="card-wrap">
-                            <div>
-                                <img class="card-image" src="assets/projects/template.webp"/>
-                                <div class="card-content">
-                                    <h2 class="card-title">Template</h2>
-                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint quaerat accusantium cumque asperiores voluptatem vel debitis, deserunt ratione.</p>
-                                </div>
-                            </div>
-                            <div class="card-actions">
-                                <button >Read More</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="project-cards" id="project-cards">
+                    
                 </div>
             </div>
         </div>
