Added modal skeleton

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                 <div class="project-cards" id="project-cards">
                     
                 </div>
+
+                <dialog id="proj-dialog">
+                    <p id="modal-content">Greetings, one and all!</p>
+                    <form method="dialog">
+                      <button>OK</button>
+                    </form>
+                  </dialog>
             </div>
         </div>
         <div class="screen-plus-container" id="team">
