Made modal responsive

--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
                 </div>
 
                 <dialog id="proj-dialog">
-                    <p id="modal-content">Greetings, one and all!</p>
-                    <form method="dialog">
-                      <button>OK</button>
-                    </form>
+                    <div class="modal-header">
+                        <form method="dialog">
+                            <button>Close</button>
+                        </form>
+                    </div>
+                    <div class="modal-content" id="modal-content"></div>
+                    <div class="modal-footer"></div>
                   </dialog>
             </div>
         </div>
