--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 </div>
 
                 <dialog id="proj-dialog">
-                    <div class="modal-header">
+                    <div class="modal-header" id="modal-header">
+                        <h1 class="accent-highlight">${{projName}}</h1>
                         <form method="dialog">
                             <button>Close</button>
                         </form>
